--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,10 +5,11 @@ sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.modules=java-module,javascript-module,html-module
  
-# Java module
+
 java-module.sonar.projectName=Java Module
 java-module.sonar.language=java
-# .表示projectBaseDir指定的目录
+
 java-module.sonar.sources=src
 java-module.sonar.projectBaseDir=.
 sonar.binaries=classes
+sonar.java.binaries=./target/classes
